# cc_device_pipeline

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-commands.txt  main.cpp
bl/: CMakeLists.txt
bl/inc/: cc_device_adas_v1_handler.hpp  sample_init_handler.hpp
bl/src/: cc_device_adas_v1_handler.cpp  cc_device_data_aggregator_handler.cpp  sample_init_handler.cpp
code/: CMakeLists.txt  main.cpp
code/bl/: CMakeLists.txt
code/bl/inc/: cc_device_data_aggregator_handler.hpp
code/bl/src/: cc_device_data_aggregator_handler.cpp
code/common/inc/: cc_device_img_capture_handler.hpp
code/common/src/: cc_device_img_capture_handler.cpp
code/cv/inc/: cc_device_adas_v1_handler.hpp  cc_device_big_model_handler.hpp
code/cv/src/: cc_device_adas_v1_handler.cpp  cc_device_big_model_handler.cpp
common/: CMakeLists.txt
common/inc/: cc_device_common.hpp  cc_device_convert_image.h  cc_device_convert_image_bytestream.hpp  cc_device_img_capture_handler.hpp  sample_common.hpp  sample_config_handler.hpp
common/src/: cc_device_convert_image.cpp  cc_device_convert_image_bytestream.cpp  cc_device_img_capture_handler.cpp  sample_config_handler.cpp
cv/: CMakeLists.txt
cv/inc/: cc_device_adas_v2_handler.hpp  cc_device_big_model_handler.hpp
cv/src/: cc_device_adas_v1_handler.cpp  cc_device_adas_v2_handler.cpp  cc_device_big_model_handler.cpp
threadHandler/: CMakeLists.txt
threadHandler/inc/: sample_threadHandler.hpp
threadHandler/src/: sample_threadHandler.cpp
